--- a/style.css
+++ b/style.css
@@ -3,15 +3,39 @@
   scroll-behavior: smooth;
   list-style: none;
   text-decoration: none;
-  margin-left: 8px;
+  margin-left: 3px;
+  margin-right: 3px;
   padding: 0;
+  width: 1440px;
+  height: 900px;
 }
 
 header{
   display: flex;
+  background-color: #BBE7EB;
+  width: 20px;
+
+}
+
+.logo{
+  width: 100px;
+  height: 150px;
 }
 
 .menu{
   display: flex;
-  
+  justify-content: center;
+  margin-left: ;
+  gap: 2rem;
+}
+
+.down{
+  position: relative;
+  display: none;
+}
+
+.searchbar{
+  display: flex;
+  align-items: center;
+  margin-left: 20rem;
 }
