--- a/style.css
+++ b/style.css
@@ -215,7 +215,7 @@ li a{
 .news-container{
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
+  gap: 1.5rem;
 }
 
 .judul-news{
@@ -232,10 +232,36 @@ li a{
 .news-desc{
   font-family: "Poppins-Light";
   color: #C5C5C5;
-  margin-top: -1.6rem;
+  margin-top: 1rem;
 }
 
 .news-img{
+  width: 25rem;
+  height: 13rem;
+}
+
+#section3{
+  padding: 0 2rem;
+}
+
+.judul-portfolio{
+  font-family: "Poppins-Medium";
+  font-size: 2rem;
+}
+
+.portfolio-text{
+  font-family: "Poppins-Medium";
+  font-size: 1.2rem;
+  margin-top: -0.2rem;
+}
+
+.portfolio-desc{
+  font-family: "Poppins-Light";
+  color: #C5C5C5;
+  margin-top: -0.1rem;
+}
+
+.portfolio-imag{
   width: 25rem;
   height: 13rem;
 }
