--- a/style.css
+++ b/style.css
@@ -83,6 +83,18 @@ li a{
   display: none;
 }
 
+.drop{
+  display: flex;
+  list-style: none;
+  width: 10rem;
+  position: absolute;
+  justify-content: center;
+  padding: 0.4rem 0.5rem;
+  z-index: 999;
+  background: rgb(0, 0, 0);
+  display: none;
+}
+
 .searchbar{
   display: flex;
   align-items: center;
@@ -114,6 +126,7 @@ li a{
   color: white;
   transition: ease-in-out 0.2s;
 }
+
 
 
 
@@ -152,6 +165,8 @@ li a{
 .dot img:hover {
   transform: scale(1.1);  
 }
+
+/*Bagian About*/
 
 #section1{
   padding: 0 2rem;
@@ -220,6 +235,78 @@ li a{
   cursor: pointer;
 }
 
+@media(max-width:1200px){
+  .about{
+    width: 40rem;
+  }
+  #section1{
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column-reverse;
+  }
+}
+
+@media(max-width:900px){
+  .about{
+    width: 30rem;
+  }
+  #section1{
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column-reverse;
+    justify-content: flex-start;
+  }
+}
+
+@media(max-width:530px){
+  .about{
+    width: 25rem;
+  }
+  .img{
+    width: 20rem;
+    height: 20rem;
+  }
+}
+@media(max-width:450px){
+    .text{
+      width: 20rem;
+    }
+    .about{
+      width: 15rem;
+    }
+    .img{
+      width: 50px;
+      height: 50px;
+    }
+  #section1{
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column-reverse;
+    justify-content: flex-start;
+  }
+}
+
+@media(max-width:350px){
+  .text{
+    width: 20rem;
+  }
+  .about{
+    width: 15rem;
+  }
+  .img{
+    width: 50px;
+    height: 50px;
+  }
+#section1 .btn{
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column-reverse;
+  justify-content: flex-start;
+}
+}
+
+/*Bagian News*/
+
 #section2{
   padding: 0 2rem;
   width: 100vw;
@@ -262,8 +349,8 @@ li a{
 }
 
 .portfolio-imag{
-  width: 33rem;
-  height: 20rem;
+  width: 24rem;
+  height: 15rem;
 }
 
 
@@ -378,10 +465,6 @@ p {
   color: #000000;
 }
 
-@media(max-width: 1200px){
-  
-}
-
 /*Bagian Footer*/
 
 #section5{
@@ -461,3 +544,4 @@ p {
     margin-left: 2rem;
   }
 }
+
