--- a/style.css
+++ b/style.css
@@ -376,6 +376,12 @@ li a{
   transition: ease-in 0.13s;
 }
 
+@media(max-width:1000px){
+  #section3{
+    margin-top: 140rem;
+  }
+}
+
 /*Bagian Services*/
 
 .services-img{
@@ -393,6 +399,14 @@ li a{
 
 .services-desc{
   width: 24.2rem;
+}
+
+@media(max-width:1000px){
+  #section4{
+    margin-top: 10rem;
+    display: flex;
+    flex-direction: column;
+  }
 }
 
 /*Bagian Testimonials*/
